syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message SetDeviceFirmwareDescriptorRequest {
	OpDevice device = 1;
	OpFirmwareDescriptor firmware_descriptor = 2;
}
